--- a/src/core/Footer/Footer.css
+++ b/src/core/Footer/Footer.css
@@ -1,7 +1,7 @@
 .footer {
     margin-top: auto;
     width: 100%;
-    background-color: #f2f2f2;
+    background-color: #594D46;
     text-align: center;
 }
 
