--- a/src/core/Home/HomePage.css
+++ b/src/core/Home/HomePage.css
@@ -1,34 +1,38 @@
 .home-page {
     display: flex;
-    flex-direction: row;
+    flex-direction: column;
     align-items: center;
-    justify-content: center;
-    margin: 2%;
-}
-
-.left-image,
-.right-image {
-    flex-basis: 50%;
-}
-
-.left-image img,
-.right-image img {
-    max-width: 100%;
-    height: auto;
-}
-
-.text-content {
-    flex-basis: 50%;
+    padding: 20px;
     text-align: center;
 }
 
-@media (max-width: 768px) {
-    .home-page {
-        flex-direction: column;
-    }
+.photo-section {
+    margin: auto;
+}
 
-    .left-image,
-    .right-image {
-        flex-basis: 100%;
-    }
+.photo-section1 {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.photo-section2 {
+    display: flex;
+    margin-bottom: 20px;
+}
+
+.photo {
+    width: 25%;
+    height: 25%;
+    border-radius: 50%;
+}
+
+.article-title {
+    font-size: 24px;
+    font-weight: bold;
+    margin-bottom: 10px;
+}
+
+.article-text {
+    font-size: 16px;
+    line-height: 1.5;
 }
