--- a/src/Components/Champions/Players/PlayerList.css
+++ b/src/Components/Champions/Players/PlayerList.css
@@ -22,6 +22,7 @@
     width: 100%;
     height: 50%;
     border-radius: 10%;
+    object-fit: cover;
 }
 
 @media (max-width: 768px) {
@@ -29,6 +30,7 @@
         height: 50%;
         max-height: 150px;
         width: 100%;
+        object-fit: cover;
     }
 
     .player-item {
