--- a/src/core/Home/HomePage.css
+++ b/src/core/Home/HomePage.css
@@ -1,34 +1,13 @@
-.home-page {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    padding: 20px;
+.greet {
     text-align: center;
 }
 
-.photo-section {
-    margin: auto;
+.greet h1 {
+    margin: 0;
 }
 
-.photo {
-    width: 28%;
-    height: 28%;
-    border-radius: 30%;
-}
-
-.photo1 {
-    height: 28%;
-    width: 28%;
-    margin: 1%;
-}
-
-.article-title {
-    font-size: 24px;
-    font-weight: bold;
-    margin-bottom: 10px;
-}
-
-.article-text {
-    font-size: 16px;
-    line-height: 1.5;
+@media (max-width: 768px) {
+    .greet {
+        margin-top: 85%;
+    }
 }
