--- a/src/Components/Champions/Players/PlayerList.css
+++ b/src/Components/Champions/Players/PlayerList.css
@@ -8,15 +8,15 @@
 
 .player-list h2,h3{
     font-family: "Franklin Gothic Demi", serif;
+    color:floralwhite;
 }
 
 .player-item {
     width: 29%;
     margin-bottom: 10px;
-    background-color: #B38867;
-    border-radius: 3%;
+    border-radius: 10%;
     padding: 1%;
-    border: 5px solid #626D71;
+    background-image: url("https://c4.wallpaperflare.com/wallpaper/398/874/541/champions-league-stadium-wallpaper-preview.jpg");
 }
 
 .player-item img {
