--- a/src/Components/Champions/Players/PlayerList.css
+++ b/src/Components/Champions/Players/PlayerList.css
@@ -17,7 +17,7 @@
     border-radius: 10%;
     padding: 1%;
     text-align: center;
-    background-image: url("https://viktar331-001-site1.btempurl.com/Images/champions-league-stadium-wallpaper-preview.jpg");
+    background-image: url("https://www.ageukmobility.co.uk/media/cache/default_859/upload/eb/e7/ebe792e04114f7358dd0f80c2c2c468a3c973e2e.jpeg");
 }
 
 .player-item img {
